[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pdttools"
version = "1.0.dev"
description = "Python data types - generic pretty printers and dump functions"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {email = "adrien.faucon@gmail.com"},
    {name = "Adrien Faucon"}
]
requires-python = ">=3.4"
dependencies = [
    "importlib-metadata"
]

[project.optional-dependencies]
test = [
  "pytest"
]

[project.scripts]

[project.gui-scripts]

[project.urls]
homepage = "https://github.com/afaucon/pdttools"


[tool.hatch.version]
path = "pdttools/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pdttools",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "-ra -q",
    "--cov=pdttools",
    "--cov-report=term",
    "--cov-report=html"
]
testpaths = [
    "tests"
]

